// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 1`] = `
<FolderIcon
  isCollab={false}
  isExternal={false}
  title={
    <FormattedMessage
      defaultMessage="Personal Folder"
      id="boxui.contentExplorer.personalFolder"
    />
  }
/>
`;

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 2`] = `
<FolderIcon
  isCollab={true}
  isExternal={false}
  title={
    <FormattedMessage
      defaultMessage="Collaborated Folder"
      id="boxui.contentExplorer.collaboratedFolder"
    />
  }
/>
`;

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 3`] = `
<FolderIcon
  isCollab={true}
  isExternal={true}
  title={
    <FormattedMessage
      defaultMessage="Collaborated Folder"
      id="boxui.contentExplorer.collaboratedFolder"
    />
  }
/>
`;
